# -

./: README.md
Mmul/: CMakeLists.txt  build.sh  main.cpp  readme.md
Mmul/include/: matrix.h
Mmul/src/: matrix.cpp
exper1/: exp  gmon.out  ipo_out.optrpt  log.txt  main  main.cpp  mul.cpp  mul.hpp
exper1/prof/: 632d57ce_12255.dyn  632d5976_14262.dyn  pgopti.dpi
exper1/r000hs/: r000hs.vtune
exper1/r000hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
exper1/r000hs/data.0/: 6348-6353.0-6353.0.th  6348-6353.0-6353.0.th.aux  6348-6353.0.trace  systemcollector-6348-Xiamu-ssr.sc
exper1/r000hs/sqlite-db/: dicer.db
exper1/r000hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
exper1/r000hs/sqlite-db/timelinedb/: directory.xml
exper2/: 200809010431_h2_莫康龙.pptx
exper3/: Roofline.html  draw.py
exper3/dgemm/: Makefile  benchmark-blas  benchmark-blocked  benchmark-naive  benchmark-test  dgemm-blocked.c  log.txt  sub.sh
exper4/1/: report.html
exper4/1/dgemm/: Makefile  auto.sh  benchmark.c  dgemm-blocked.c  nohup.out
exper4/1/stencil/: Makefile  benchmark-mpi  benchmark-omp  benchmark.c  check.sh  common.h  stencil-block.c  stencil-mpi.c  stencil-omp.c  stencil-simd.c  sub.sh
exper4/4/dgemm/: benchmark-omp  dgemm-omp.c  sub.sh
exper4/4/stencil/: 5-24-16-16  Makefile  benchmark.sh  check.c  common.h  run.sh  stencil-omp.cpp  test.sh
exper5/spmv_GPU/: Makefile  benchmark.cu  make.sh  run.sh  run_all.sh  spmv-optimized.cu  utils.cu
exper5/spmv_GPU/log/: 0-GPU.txt  0-cusparse.txt  0-naive.txt  0-optimized-2.txt
(+13 files in other folders)
